--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "method-override": "^3.0.0",
-    "pg": "^8.11.3"
+    "postgres": "^3.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
