--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "postgres": "^3.4.3"
   },
